--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: "3.9"
 services:
     html_test_server:
+      ports:
+        - "5000:5000"
       build:
         context: .
         dockerfile: Dockerfile-html_test_server
